fixed bot navbar spacing

--- a/react-app/src/components/Navigation/navigation.css
+++ b/react-app/src/components/Navigation/navigation.css
@@ -38,7 +38,7 @@
 .navbar-bottom {
     display: flex;
     flex-direction: row;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     align-items: center;
     background-color: rgb(225, 5, 0);
     height: 1px;
@@ -52,7 +52,7 @@
 
 .navbar-left {
     margin-left: 15%;
-    width: 35%;
+    width: 10%;
     height: 100%;
     display: flex;
     flex-direction: row;
